etc/iptables/iptables.rules
# Generated by iptables-save v1.4.19.1 on Sun Aug 25 08:50:01 2013
*filter
:INPUT ACCEPT [112:27083]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A OUTPUT -d 193.170.62.252/32 -p udp -j ACCEPT
-A OUTPUT -d 198.60.22.240/32 -p udp -j ACCEPT
-A OUTPUT -d 69.164.217.193/32 -p udp -j ACCEPT
-A OUTPUT -d 91.236.251.5/32 -p udp -j ACCEPT
-A OUTPUT -d 193.1.31.66/32 -p udp -j ACCEPT
-A OUTPUT -d 193.40.133.142/32 -p udp -j ACCEPT
-A OUTPUT -d 66.175.216.101/32 -p udp -j ACCEPT
-A OUTPUT -d 66.220.6.244/32 -p udp -j ACCEPT
-A OUTPUT -d 46.4.37.135/32 -p udp -j ACCEPT
-A OUTPUT -d 80.153.14.198/32 -p udp -j ACCEPT
-A OUTPUT -d 89.238.66.126/32 -p udp -j ACCEPT
-A OUTPUT -d 217.145.98.135/32 -p udp -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.168.42.0/24 -j ACCEPT
-A OUTPUT -d 127.0.0.0/8 -j ACCEPT
-A OUTPUT -m owner --uid-owner 43 -j ACCEPT
-A OUTPUT -j LOG
-A OUTPUT -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -j DROP
COMMIT
# Completed on Sun Aug 25 08:50:01 2013
# Generated by iptables-save v1.4.19.1 on Sun Aug 25 08:50:01 2013
*nat
:PREROUTING ACCEPT [2:406]
:INPUT ACCEPT [4:526]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -d 192.168.42.0/24 -i br0 -j RETURN
-A PREROUTING -i br0 -p udp -m udp --dport 53 -j REDIRECT --to-ports 9053
-A PREROUTING -i br0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j REDIRECT --to-ports 9040
-A OUTPUT -o lo -j RETURN
-A OUTPUT -m owner --uid-owner 43 -j RETURN
-A OUTPUT -p udp -m udp --dport 53 -j REDIRECT --to-ports 9053
-A OUTPUT -d 192.168.42.0/24 -j RETURN
-A OUTPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j REDIRECT --to-ports 9040
COMMIT
# Completed on Sun Aug 25 08:50:01 2013
